# quali_bus

./: .gitignore  LICENSE  MANIFEST.in  README.md  db.py  dev-requirements.txt  indicadores.py  pyproject.toml  querys.py  requirements.txt  settings.py  setup.py  t.py
.github/workflows/: publish.yml
app/: Linhas.ipynb  associacao.ipynb  graficos.ipynb  indicadores.py  juntar_planilhas.py  moc_bus.ipynb  pontos_tratados.csv  testes.ipynb
arquivos/: .~lock.viagens.xlsx#  REGIÕES DA ÁREA URBANA - MOC.rar  aaaaaaa.kml  bairros_sirgas.shp  doc.kml  frequencia_atendimento.csv  frequencia_atendimento.xlsx  linhas_observatório.kmz  linhas_tratadas.kml  planilha_gtfs.xlsx  viagens.xlsx
arquivos/REGIÕES DA ÁREA URBANA - MOC/: Export_Output.dbf  Export_Output.sbn  Export_Output.sbx  Export_Output.shp  Export_Output.shp.xml  Export_Output.shx
docs/: index.md
indicador_iqt/data_analysis/: __init__.py  analisar_dataframe.py  calcular_indicadores.py  calculate_indicator.py  carregadar_dados.py  classificar_indicadores.py  classificator.py  data_loader.py  df_analysis.py  visualizar_graficos.py  visualization.py
indicador_iqt/map_tools/: __init__.py  camadas.py  carregar_camadas.py  cricao_mapa.py  data_loader_layers.py  estilos.py  layers.py  map_creation.py  styles.py
indicador_iqt/utils/: __init__.py  associador.py  colors.py  cores.py  modelos.py  models.py  points_distances.py  utils.py
moc_bus/: 01-Janeiro-2024.rar  02-fevereiro-2024.rar  03-Marco-2024.rar  04-Abril-2024.rar  05-Maio-2024.rar  06-Junho-2024.rar  07-Julho-2024.rar  08-agosto-2024.rar  09-Setembro-2023.rar  09-Setembro-2024.rar  10-Outubro-2023.rar  11-Novembro-2023.rar  12-Dezembro-2023.rar
planilhas/: .~lock.Matriz_Integracao.csv#  .~lock.dados_linhas.csv#  Matriz_Integracao.csv  Veículos e tempo de viagem.ods  dados_linhas.csv  pontos_tratados.csv  teste.csv
quali_bus/: __init__.py  facade.py
quali_bus/data_analysis/: __init__.py  calcular_indicadores.py  carregar_dados.py  classificar_indicadores.py  visualizacao_bairros.py
quali_bus/map_tools/: __init__.py  camadas.py  criacao_mapa.py  cricao_mapa.py
quali_bus/utils/: __init__.py  associador.py  config.py  cores.py  modelos.py  utils.py
quali_bus/visualization/: __init__.py  visualizacao_bairros.py
src/indicador_iqt/: __init__.py
src/indicador_iqt/data_analysis/: data_loader.py  visualization.py
src/indicador_iqt/map_tools/: layers.py  map_creation.py  styles.py
src/indicador_iqt/utils/: utils.py
tests/: test_associador.py  test_classificador.py  test_graficos.py  test_indicadores.py  test_indicadores_calculator.py  test_mapa_iqt.py  test_validacoes.py
