[tool.ruff]
line-length = 150

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "D",   # pydocstyle
]

# Removido "UP" para evitar reescrita de código

ignore = [
    "E501",  # line length violations
    "W191",  # Ignore indentação com tabs
    "E111",  # Indentação não múltipla de 4
    "E114",  # Indentação não múltipla de 4 (comentários)
    "E116",  # Indentação inesperada
    "E117",  # Over-indented
    "D206",
    "D100",
    "D212",
    "D104",
    "D101",
    "D200",
    "D107",
    "B904",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint.isort]
known-first-party = ["escritorio"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",  # Ignorar imports não usados
    "F403",  # Ignorar imports globais
    "D",     # Ignorar erros de docstring
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "indicador_iqt"
version = "0.1.6"
authors = [
    { name="Yago Maia", email="yagohenriquev123@gmail.com" },
]
keywords = ["transporte", "IQT", "GIS", "análise espacial", "transporte público"]
description = "Automatizar o cálculo do Índice de Qualidade do Transporte (IQT). O IQT é uma métrica essencial para a análise e otimização do transporte público, considerando fatores como pontualidade, frequência de atendimento, cumprimento de itinerários e infraestrutura."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research"
]
dependencies = [
    "numpy",
    "pandas",
    "geopandas",
    "folium",
    "shapely",
    "matplotlib",
    "fiona",
    "seaborn",
]

[project.urls]
"Homepage" = "https://github.com/YagoMaia/indicador_iqt"
"Bug Tracker" = "https://github.com/YagoMaia/indicador_iqt/issues"